Updated reflex to latest version

--- a/default.project.json
+++ b/default.project.json
@@ -43,6 +43,14 @@
 			"$className": "Workspace",
 			"$properties": {
 				"FilteringEnabled": true
+			},
+			"characters": {
+				"$className": "Folder",
+				"$ignoreUnknownInstances": false,
+				"players": {
+					"$className": "Folder",
+					"$ignoreUnknownInstances": true
+				}
 			}
 		},
 		"HttpService": {
