--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rbxts/compiler-types": "^2.1.0-types.1",
-    "@rbxts/types": "^1.0.701",
+    "@rbxts/compiler-types": "^2.1.1-types.0",
+    "@rbxts/types": "^1.0.707",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
@@ -22,21 +22,21 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "prettier": "^2.3.2",
     "rbxts-transform-debug": "^2.0.3",
-    "rbxts-transformer-flamework": "^1.0.0-beta.21",
-    "roblox-ts": "^2.1.0",
+    "rbxts-transformer-flamework": "^1.0.0-beta.22",
+    "roblox-ts": "^2.1.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@flamework/components": "^1.0.0-beta.21",
-    "@flamework/core": "^1.0.0-beta.21",
-    "@flamework/networking": "^1.0.0-beta.21",
+    "@flamework/components": "^1.0.0-beta.22",
+    "@flamework/core": "^1.0.0-beta.22",
+    "@flamework/networking": "^1.0.0-beta.22",
     "@rbxts/immut": "^0.4.4-ts.0",
-    "@rbxts/lapis": "^0.2.0-ts.3",
+    "@rbxts/lapis": "^0.2.3",
     "@rbxts/promise-character": "^1.0.3",
-    "@rbxts/reflex": "^3.4.0",
+    "@rbxts/reflex": "^4.2.0",
     "@rbxts/roact": "^1.4.4-ts.0",
     "@rbxts/roact-hooked": "^2.6.0",
-    "@rbxts/roact-reflex": "^2.0.0",
+    "@rbxts/roact-reflex": "^2.1.0",
     "@rbxts/services": "^1.5.1",
     "@rbxts/sift": "^0.0.6",
     "@rbxts/t": "^3.1.0"
