--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,8 @@
 		"sourceType": "module",
 		"project": "./tsconfig.json"
 	},
-	"ignorePatterns": [
-		"/out"
-	],
-	"plugins": [
-		"@typescript-eslint",
-		"roblox-ts",
-		"prettier",
-		"sort-imports-es6-autofix"
-	],
+	"ignorePatterns": ["/out"],
+	"plugins": ["@typescript-eslint", "roblox-ts", "prettier", "sort-imports-es6-autofix"],
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
@@ -24,10 +17,16 @@
 	],
 	"rules": {
 		"prettier/prettier": "error",
-		"@typescript-eslint/member-ordering": "error",
-		"@typescript-eslint/explicit-function-return-type": "error",
 		"roblox-ts/no-delete": "off",
+		"no-plusplus": "error",
+		"prefer-destructuring": "error",
+		"consistent-return": "error",
 		"sort-imports-es6-autofix/sort-imports-es6": "error",
-		"@typescript-eslint/consistent-type-imports": "error"
+		"@typescript-eslint/member-ordering": "error",
+		"@typescript-eslint/strict-boolean-expressions": "error",
+		"@typescript-eslint/consistent-type-imports": "error",
+		"@typescript-eslint/explicit-function-return-type": "error",
+		"@typescript-eslint/explicit-member-accessibility": "error",
+		"@typescript-eslint/array-type": ["error", { "default": "generic" }]
 	}
 }
