--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rbxts/compiler-types": "^2.1.1-types.0",
-    "@rbxts/types": "^1.0.712",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-roblox-ts": "^0.0.30",
+    "@rbxts/compiler-types": "^2.2.0-types.0",
+    "@rbxts/types": "^1.0.720",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-roblox-ts": "^0.0.36",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "prettier": "^2.3.2",
-    "rbxts-transform-debug": "^2.0.3",
-    "rbxts-transformer-flamework": "^1.0.0-beta.23",
-    "roblox-ts": "^2.1.1",
-    "typescript": "^4.9.5"
+    "prettier": "^3.0.3",
+    "rbxts-transform-debug": "^2.2.0",
+    "rbxts-transformer-flamework": "^1.0.0-beta.24",
+    "roblox-ts": "^2.2.0",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@flamework/components": "^1.0.0-beta.23",
-    "@flamework/core": "^1.0.0-beta.23",
-    "@flamework/networking": "^1.0.0-beta.23",
+    "@flamework/components": "^1.0.0-beta.24",
+    "@flamework/core": "^1.0.0-beta.24",
+    "@flamework/networking": "^1.0.0-beta.24",
     "@rbxts/immut": "^0.4.4-ts.0",
     "@rbxts/lapis": "^0.2.4",
+    "@rbxts/maid": "^1.1.0",
     "@rbxts/promise-character": "^1.0.3",
-    "@rbxts/reflex": "^4.2.0",
+    "@rbxts/reflex": "^4.2.2",
     "@rbxts/roact": "^1.4.4-ts.0",
-    "@rbxts/roact-hooked": "^2.6.0",
+    "@rbxts/roact-hooked": "^2.6.1",
     "@rbxts/roact-reflex": "^2.1.0",
     "@rbxts/services": "^1.5.1",
-    "@rbxts/sift": "^0.0.6",
+    "@rbxts/sift": "^0.0.8",
     "@rbxts/t": "^3.1.0"
   }
 }
